--- a/.production.env
+++ b/.production.env
@@ -3,7 +3,8 @@ PRIVATE_KEY=ascdwudhjqwmiduhqweuidhasiu
 # Database
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=
+MYSQL_USER=user
+MYSQL_PASSWORD=user
 MYSQL_DB=erp_aero
+DOMAIN_SERVER=45.66.10.212
 
